# uniadmin

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py
uniadmin/: __init__.py  client.py  models.py
uniadmin/graders/: __init__.py  base_grader.py  dispatcher.py  grader_task_1.py  grader_task_2.py  grader_task_3.py  grader_task_4.py  grader_task_5.py  grader_task_6.py
uniadmin/server/: __init__.py  app.py  uniadmin_environment.py
uniadmin/tasks/: __init__.py  task_1_course_inquiry.json  task_2_hostel_allocation.json  task_3_course_switch.json  task_4_concurrent_conflict.json  task_5_graduation_crisis.json  task_6_bulk_schedule.json
uniadmin/tests/: __init__.py  test_environment_core.py  test_graders.py  test_null_agent.py  test_optimal_agent.py  test_validate.py  test_write_tools.py
uniadmin/world/: __init__.py  generator.py  loader.py  policies.json  world_seed.json
